# kapitalbestand

./: .dockerignore  .git-blame-ignore-revs  .gitignore  CLAUDE.md  Dockerfile  build.sh  docker-compose.yml  eslint.config.js  package-lock.json  package.json  todo.md
backend-v2/: .env  Cargo.toml  scheme.sql
backend-v2/.sqlx/: query-2557300ef38b3f1dd823d5b68cd74a4b9e6354d94fb8fb9f1864581bcc6af603.json  query-2c2b2fc2e03e39a4520d27255394b7eebcfefec154a560fb4083f97de03eb304.json  query-486b9e6242b9bbb7405a5e8c494a8c617809e7ed1eafbd52090c8d07e9ebb670.json  query-4998f3ef966ec890b8b3ef0ee702eb52c697fa7eaab64dc673250dcfc074501b.json  query-5196dbee0c8a501033b54d43b36305ff4289a85c3d9756f37c2a1061b839ec5d.json  query-5722192bb24283564baff571b39d7c0e7fe369583561a12966cc9fa76e3540a0.json  query-5c079cdcce895abcc4517cad9482e775264f9c8cac8e18ee45cb3a31c43a3eaa.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-7d00c181abcea95a6a3b33f8963870c143790671e75f04280fc974fa7f6459c3.json  query-808f5c69ad670669c40b3163b516f9629dccc3de7cbfe3cd3810b5086006e6eb.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-9313ddfd503e734ff477bf420b4819ce610d811025234d6653f92410c00d5444.json  query-b32f31425f401dfaf49fe61b62f3061200bd7c5e0aea53829118da935b085acf.json  query-ceaf151cb931f9e476cb6d7ae28e2dac8b1441aa3c1d568452946c5f7d2c4ecd.json  query-d6d45ade79a03f01a09a99da3372dac9d5c24d2c21652735484c5a6c8e134290.json  query-d9d794a11f24ea6e5862a08921fb5c2e4b9a99b08c568af57f6fb74caa578ba5.json  (+2 more)
backend-v2/docs/: categories.md  (+3 more)
(+265 files in other folders)
