[package]
name = "backend-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.88"
axum = "0.8.4"
axum-login = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
serde = "1.0.219"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
axum-macros = "0.5.0"
http-body-util = "0.1.3"
regex = "1.11.1"
tower = "0.5.2"
